--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>botg-element</title>
-    </head>
-    <body>
-        Hello.
-    </body>
+<head>
+  <title>botg-element</title>
+  <script type="module" src="botg-element.js"></script>
+</head>
+
+<body>
+  <p>Hello.</p>
+  <botg-element></botg-element>
+</body>
+
 </html>
