Minor flex-ing.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>botg-element</title>
+  <style>
+    botg-element {
+      width: 100%;
+    }
+  </style>
   <script type="module" src="botg-element.js"></script>
 </head>
 
