Massive prettification, progress toward #5.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div>
-    <button>share</button>
+    <button>share</button> (copies to clipboard)
   </div>
   <botg-element></botg-element>
   <script>
