--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 
-    button, div#share {
+    button,
+    div#share {
       font-family: 'Amatic SC';
       font-size: 30px;
     }
@@ -15,6 +16,31 @@
       padding: 0 15px;
     }
 
+    html {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      margin: 0;
+      box-sizing: border-box;
+      padding: 40px;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+      flex-direction: column;
+    }
+
+    #graph {
+      flex: 1;
+      display: flex;
+    }
+
+    botg-element {
+      flex: 1;
+      justify-content: flex-start;
+    }
   </style>
   <script type="module" src="botg-element.js"></script>
 </head>
@@ -23,7 +49,9 @@
   <div id="share">
     <button>share</button> (copies to clipboard)
   </div>
-  <botg-element></botg-element>
+  <div id="graph">
+    <botg-element></botg-element>
+  </div>
   <script>
     document.querySelector('botg-element').setAttribute('data',
       new URL(window.location).searchParams.get('g'));
