Make a mostly working graph-label element.

--- a/mock.html
+++ b/mock.html
@@ -10,9 +10,15 @@
       background-color: lightblue
     }
 
+    graph-label {
+      position: absolute;
+      top: 300px;
+      left: 200px;
+    }
+
 </style>
   <script type="module" src="graph-label.js"></script>
   </head>
   <body>
-    <graph-label></graph-label>
+    <graph-label title="better" rotate="90"></graph-label>
   </body>
