--- a/mock.html
+++ b/mock.html
@@ -7,18 +7,21 @@
     @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 
     body {
-      background-color: lightblue
+      background-color: lightblue;
     }
 
-    graph-label {
-      position: absolute;
-      top: 300px;
-      left: 200px;
+    #y-top {
+      transform: translate(30px,100px)
+    }
+
+    #y-bottom {
+      transform: translate(30px,400px)
     }
 
 </style>
   <script type="module" src="graph-label.js"></script>
   </head>
   <body>
-    <graph-label title="better" rotate="90"></graph-label>
+    <graph-label id="y-top" title="better" rotate="90"></graph-label>
+    <graph-label id="y-bottom" title="worse" rotate="90"></graph-label>
   </body>
